[package]
name = "my_box_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7"
specs = { version = "0.17.0", features = ["specs-derive"] }
glam = { version = "0.20.0", features = ["mint"] }
